tests/ui/issues/issue-35570.stderr
error[E0277]: the trait bound `for<'a> (): Trait2<'a>` is not satisfied
  --> $DIR/issue-35570.rs:8:40
   |
LL | fn _ice(param: Box<dyn for <'a> Trait1<<() as Trait2<'a>>::Ty>>) {
   |                                        ^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'a> Trait2<'a>` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-35570.rs:4:1
   |
LL | trait Trait2<'a> {
   | ^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `for<'a> (): Trait2<'a>` is not satisfied
  --> $DIR/issue-35570.rs:8:16
   |
LL | fn _ice(param: Box<dyn for <'a> Trait1<<() as Trait2<'a>>::Ty>>) {
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'a> Trait2<'a>` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-35570.rs:4:1
   |
LL | trait Trait2<'a> {
   | ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
